--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 
 def versionMajor = 1
 def versionMinor = 0
@@ -48,30 +48,34 @@ android {
             dimension "mode"
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
+            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
 
         }
         uat {
             dimension "mode"
             applicationIdSuffix ".uat"
             versionNameSuffix "-uat"
+            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
         }
         pre {
             dimension "mode"
             applicationIdSuffix ".pre"
             versionNameSuffix "-pre"
+            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
         }
         pro {
             dimension "mode"
+            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
         }
     }
 
     buildTypes {
         debug {
-            debuggable false
+            debuggable true
             applicationIdSuffix ".debug"
         }
         release {
-            debuggable true
+            debuggable false
             productFlavors.pro.signingConfig signingConfigs.pro
             productFlavors.pre.signingConfig signingConfigs.pre
             productFlavors.uat.signingConfig signingConfigs.uat
@@ -81,19 +85,46 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    android {
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
+    }
 }
 
-androidExtensions {
+/*androidExtensions {
     experimental = false
-}
+}*/
+
+ext.kotlin_version = '1.2.50'
+ext.supportVersion = '27.1.1'
+ext.constraintLayout = '1.1.2'
+ext.glideVersion = '4.6.1'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayout"
+    implementation "com.android.support:cardview-v7:$supportVersion"
+
+    // anko
+    implementation 'org.jetbrains.anko:anko-common:0.9'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.1'
+
+    // images
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
