--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,21 @@
 apply plugin: 'com.android.application'
+
 apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
 
 def versionMajor = 1
 def versionMinor = 0
 def versionPatch = 0
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.javimartd.theguardian"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode versionMajor * 1000 + versionMinor * 100 + versionPatch * 10
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -85,39 +89,45 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    android {
-        lintOptions {
-            checkReleaseBuilds false
-            // Or, if you prefer, you can continue to check for errors in release builds,
-            // but continue the build even when errors are found:
-            abortOnError false
-        }
-    }
 }
 
-/*androidExtensions {
+androidExtensions {
     experimental = false
-}*/
-
-ext.kotlin_version = '1.2.50'
-ext.supportVersion = '27.1.1'
-ext.constraintLayout = '1.1.2'
-ext.glideVersion = '4.6.1'
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$supportVersion"
-    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraintLayout"
-    implementation "com.android.support:cardview-v7:$supportVersion"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+
+    // lifeCycle
+    implementation "android.arch.lifecycle:extensions:$lifeCycle_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifeCycle_version"
 
     // anko
-    implementation 'org.jetbrains.anko:anko-common:0.9'
+    implementation "org.jetbrains.anko:anko-common:$anko_version"
+
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // dagger
+    //annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    // retrofit OkHttp
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation "com.google.code.gson:gson:$gson_version"
 
     // images
     implementation "com.github.bumptech.glide:glide:$glideVersion"
