--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.kotlin_version = '1.2.50'
+    ext.support_version = '28.0.0'
+    ext.constraintLayout = '1.1.3'
+    ext.lifeCycle_version = '1.1.1'
+    ext.dagger_version = '2.13'
+    ext.gson_version = '2.8.2'
+    ext.coroutines_version = '1.0.0'
+    ext.retrofit_version = '2.3.0'
+    ext.okhttp_version = '3.5.0'
+    ext.anko_version = '0.10.4'
+    ext.glideVersion = '4.6.1'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.50"
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
