--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,22 +91,19 @@ android {
     }
 }
 
-androidExtensions {
-    experimental = false
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:$constraintLayout"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayout_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
 
     // lifeCycle
     implementation "android.arch.lifecycle:extensions:$lifeCycle_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$lifeCycle_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    kapt "android.arch.lifecycle:compiler:$lifeCycle_version"
 
     // anko
     implementation "org.jetbrains.anko:anko-common:$anko_version"
@@ -116,7 +113,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // dagger
-    //annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
@@ -126,15 +122,37 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
+    // room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
+    // room test helpers
+    testImplementation "android.arch.persistence.room:testing:$room_version"
+
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
 
     // images
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    // testing
+    // Required for local unit tests (JUnit 4 framework)
     testImplementation 'junit:junit:4.12'
+
+    // Required for instrumented tests
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // mock web server
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
+
+    // espresso
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    // mockito
+    testImplementation 'org.mockito:mockito-core:2.21.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2'
+
 }
