--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'org.sonarqube'
+
 def versionMajor = 1
 def versionMinor = 0
 def versionPatch = 0
@@ -155,4 +157,19 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.21.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2'
 
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectName", "The Guardian"
+        property "sonar.projectKey", project.android.defaultConfig.applicationId
+        property "sonar.projectVersion", project.android.defaultConfig.versionCode
+        property "sonar.host.url", "http://localhost:9000"
+        property "sonar.sourceEncoding", "UTF-8"
+        property 'sonar.language', 'kotlin'
+        property "sonar.sources", "src/main/java, src/main/res"
+        property "sonar.exclusions","build/**,**/*.png"
+        property "sonar.import_unknown_files", false
+        property "sonar.android.lint.report", "./build/outputs/lint-results.xml"
+    }
 }
