--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ obj/
 
 # User-specific configurations
 .idea/caches/
+.idea/codeStyles
+.idea/gradle.xml
+.idea/runConfiguration.xml
 .idea/libraries/
 .idea/sonarlint
 .idea/shelf/
