--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,8 @@ android {
         targetSdkVersion 28
         versionCode versionMajor * 1000 + versionMinor * 100 + versionPatch * 10
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
@@ -93,30 +94,28 @@ android {
     }
 }
 
+ext.dagger_version = '2.13'
+ext.coroutines_version = '1.0.0'
+ext.retrofit_version = '2.3.0'
+ext.okhttp_version = '3.11.0'
+ext.glide_version = '4.6.1'
+ext.mockWebServer_version = '3.8.1'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //implementation "com.android.support:appcompat-v7:$support_version"
     implementation "androidx.appcompat:appcompat:1.0.2"
-    //implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
-    //implementation "com.android.support.constraint:constraint-layout:$constraintLayout_version"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    //implementation "com.android.support:cardview-v7:$support_version"
     implementation "androidx.cardview:cardview:1.0.0"
-    //implementation "com.android.support:design:$support_version"
     implementation "com.google.android.material:material:1.1.0-alpha04"
 
     // lifeCycle
-    //implementation "android.arch.lifecycle:extensions:$lifeCycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03"
-    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-    //kapt "android.arch.lifecycle:compiler:$lifeCycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03"
 
     // anko
-    implementation "org.jetbrains.anko:anko-common:$anko_version"
+    implementation "org.jetbrains.anko:anko-common:0.10.4"
 
     // coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
@@ -135,17 +134,14 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // room
-    //implementation "android.arch.persistence.room:runtime:$room_version"
     implementation "androidx.room:room-runtime:2.1.0-alpha06"
-    //kapt "android.arch.persistence.room:compiler:$room_version"
     kapt "androidx.room:room-compiler:2.1.0-alpha06"
 
     // room test helpers
-    //testImplementation "android.arch.persistence.room:testing:$room_version"
     testImplementation "androidx.room:room-testing:2.1.0-alpha06"
 
     // Gson
-    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.google.code.gson:gson:2.8.2"
 
     // images
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -155,9 +151,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     // Required for instrumented tests
-    //androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     implementation "androidx.annotation:annotation:1.0.2"
-    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation "androidx.test:runner:1.1.1"
 
     // mock web server
@@ -165,13 +159,9 @@ dependencies {
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
 
     // espresso
-    //androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
-    //androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.1.1"
-    //androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.1.1"
-    //androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation "androidx.test:rules:1.1.1"
 
     // mockito
