--- a/build.gradle
+++ b/build.gradle
@@ -2,29 +2,15 @@
 
 buildscript {
 
-    ext.kotlin_version = '1.2.50'
-    ext.support_version = '28.0.0'
-    ext.constraintLayout_version = '1.1.3'
-    ext.lifeCycle_version = '1.1.1'
-    ext.dagger_version = '2.13'
-    ext.gson_version = '2.8.2'
-    ext.coroutines_version = '1.0.0'
-    ext.retrofit_version = '2.3.0'
-    ext.room_version = "1.1.1"
-    ext.okhttp_version = '3.11.0'
-    ext.anko_version = '0.10.4'
-    ext.glide_version = '4.6.1'
-    ext.mockWebServer_version = '3.8.1'
-    ext.mockito_version = '2.21.0'
-    ext.espresso_version = '3.0.2'
+    ext.kotlin_version = '1.3.21'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.0"
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6'
 
         // NOTE: Do not place your application dependencies here; they belong
