--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.1.0-alpha05"
+    implementation "com.google.android.material:material:1.0.0"
 
     // lifeCycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04"
@@ -166,6 +166,10 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.1.1"
     androidTestImplementation "androidx.test:rules:1.1.1"
+
+    // androidX helpers
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.0.0'
 
     // mockito
     testImplementation 'org.mockito:mockito-core:2.21.0'
