--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,6 @@ android {
                 throw new InvalidUserDataException("You should define THE_GUARDIAN_STORE and THE_GUARDIAN_APP_KEY in gradle.properties. " + e.getMessage())
             }
         }
-
-        pre {
-            // ...
-        }
-        uat {
-            // ...
-        }
         dev {
             // ...
         }
@@ -49,29 +42,18 @@ android {
     flavorDimensions "mode"
 
     productFlavors {
-
         dev {
             dimension "mode"
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
             buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
+            resValue "string", "HOST", "https://content.guardianapis.com"
 
-        }
-        uat {
-            dimension "mode"
-            applicationIdSuffix ".uat"
-            versionNameSuffix "-uat"
-            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
-        }
-        pre {
-            dimension "mode"
-            applicationIdSuffix ".pre"
-            versionNameSuffix "-pre"
-            buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
         }
         pro {
             dimension "mode"
             buildConfigField "String", "THE_GUARDIAN_API_KEY", '"db0d0891-0604-403a-9fad-f8ea5a76dbcb"'
+            resValue "string", "HOST", "https://content.guardianapis.com"
         }
     }
 
@@ -82,13 +64,16 @@ android {
         }
         release {
             debuggable false
-            productFlavors.pro.signingConfig signingConfigs.pro
-            productFlavors.pre.signingConfig signingConfigs.pre
-            productFlavors.uat.signingConfig signingConfigs.uat
-            productFlavors.dev.signingConfig signingConfigs.dev
-
             minifyEnabled false
+            productFlavors.pro.signingConfig signingConfigs.pro
+            productFlavors.dev.signingConfig signingConfigs.dev
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    android.variantFilter { variant ->
+        if(variant.buildType.name == 'release' && variant.getFlavors().get(0).name == 'mock') {
+            variant.setIgnore(true)
         }
     }
 }
@@ -99,19 +84,28 @@ ext.retrofit_version = '2.3.0'
 ext.okhttp_version = '3.11.0'
 ext.glide_version = '4.6.1'
 ext.mockWebServer_version = '3.8.1'
+ext.rxjava2_version = '2.1.1'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.google.android.material:material:1.0.0"
 
+    // rx java
+    implementation 'javax.inject:javax.inject:1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_version"
+    implementation 'javax.annotation:jsr250-api:1.0'
+
+
     // lifeCycle
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-beta01"
 
     // anko
     implementation "org.jetbrains.anko:anko-common:0.10.4"
@@ -132,20 +126,21 @@ dependencies {
     // retrofit OkHttp
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     // okhttp
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // room
-    implementation "androidx.room:room-runtime:2.1.0"
-    kapt "androidx.room:room-compiler:2.1.0"
+    implementation "androidx.room:room-runtime:2.2.0"
+    kapt "androidx.room:room-compiler:2.2.0"
 
     // room test helpers
-    testImplementation "androidx.room:room-testing:2.1.0"
+    testImplementation "androidx.room:room-testing:2.2.0"
 
     // Gson
-    implementation "com.google.code.gson:gson:2.8.2"
+    implementation "com.google.code.gson:gson:2.8.5"
 
     // images
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -173,7 +168,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
 
     // mockito
-    testImplementation 'org.mockito:mockito-core:2.21.0'
+    testImplementation 'org.mockito:mockito-core:2.25.0'
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2'
 
 }
