feat: included news activity with MVVM pattern

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,7 @@
             android:value="true" />
 
         <activity
-            android:name=".ui.news.NewsActivity"
-            android:screenOrientation="portrait"/>
+            android:name=".ui.news.NewsActivity" />
         <activity
             android:name=".ui.webView.WebViewActivity"
             android:screenOrientation="portrait" />
