--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,12 +86,13 @@ ext.glide_version = '4.8.0'
 ext.mockWebServer_version = '3.8.1'
 ext.rxjava2_version = '2.1.1'
 ext.espresso_version = '3.2.0'
+ext.lifecycle_version = '2.1.0'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.google.android.material:material:1.0.0"
@@ -102,8 +103,7 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
 
     // lifeCycle
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     // anko
     implementation "org.jetbrains.anko:anko-common:0.10.4"
@@ -131,11 +131,11 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // room
-    implementation "androidx.room:room-runtime:2.2.1"
-    kapt "androidx.room:room-compiler:2.2.1"
+    implementation "androidx.room:room-runtime:2.2.2"
+    kapt "androidx.room:room-compiler:2.2.2"
 
     // room test helpers
-    testImplementation "androidx.room:room-testing:2.2.1"
+    testImplementation "androidx.room:room-testing:2.2.2"
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
@@ -164,6 +164,9 @@ dependencies {
     // androidX helpers
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+
+    // helpers for LiveData
+    testImplementation "android.arch.core:core-testing:$lifecycle_version"
 
     // mockito
     testImplementation 'org.mockito:mockito-core:2.25.0'
