--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ ext.dagger_version = '2.17'
 ext.coroutines_version = '1.0.0'
 ext.retrofit_version = '2.3.0'
 ext.okhttp_version = '3.11.0'
-ext.glide_version = '4.8.0'
+ext.glide_version = '4.11.0'
 ext.mockWebServer_version = '3.8.1'
 ext.rxjava2_version = '2.1.1'
 ext.espresso_version = '3.2.0'
@@ -91,11 +91,12 @@ ext.lifecycle_version = '2.1.0'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "com.google.android.material:material:1.2.1"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // rx java
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
@@ -103,7 +104,8 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
 
     // lifeCycle
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
 
     // anko
     implementation "org.jetbrains.anko:anko-common:0.10.4"
@@ -158,7 +160,6 @@ dependencies {
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
 
     // espresso
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
@@ -166,9 +167,6 @@ dependencies {
     // androidX helpers
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
-
-    // helpers for LiveData
-    testImplementation "android.arch.core:core-testing:$lifecycle_version"
 
     // mockito
     testImplementation 'org.mockito:mockito-core:2.25.0'
