--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ android {
 }
 
 ext.dagger_version = '2.17'
-ext.coroutines_version = '1.0.0'
+ext.coroutines_version = '1.3.9'
 ext.retrofit_version = '2.3.0'
 ext.okhttp_version = '3.11.0'
 ext.glide_version = '4.11.0'
@@ -87,6 +87,7 @@ ext.mockWebServer_version = '3.8.1'
 ext.rxjava2_version = '2.1.1'
 ext.espresso_version = '3.2.0'
 ext.lifecycle_version = '2.1.0'
+ext.room_version = '2.2.6'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -132,9 +133,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // room
-    implementation "androidx.room:room-rxjava2:2.2.5"
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // room test helpers
     testImplementation "androidx.room:room-testing:2.2.2"
@@ -166,6 +167,7 @@ dependencies {
     // androidX helpers
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // mockito
     testImplementation 'org.mockito:mockito-core:2.25.0'
