--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,22 +79,24 @@ android {
 }
 
 ext.dagger_version = '2.17'
-ext.coroutines_version = '1.0.0'
+ext.coroutines_version = '1.3.9'
 ext.retrofit_version = '2.3.0'
 ext.okhttp_version = '3.11.0'
-ext.glide_version = '4.8.0'
+ext.glide_version = '4.11.0'
 ext.mockWebServer_version = '3.8.1'
 ext.rxjava2_version = '2.1.1'
 ext.espresso_version = '3.2.0'
+ext.lifecycle_version = '2.1.0'
+ext.room_version = '2.2.6'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "com.google.android.material:material:1.2.1"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     // rx java
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
@@ -131,11 +133,12 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // room
-    implementation "androidx.room:room-runtime:2.2.1"
-    kapt "androidx.room:room-compiler:2.2.1"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // room test helpers
-    testImplementation "androidx.room:room-testing:2.2.1"
+    testImplementation "androidx.room:room-testing:2.2.2"
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
@@ -164,11 +167,13 @@ dependencies {
     // androidX helpers
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // mockito
-    testImplementation 'org.mockito:mockito-core:2.25.0'
+    def mockito_version = 'latest.release'
+    testImplementation "org.mockito:mockito-core:$mockito_version"
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2'
-    androidTestImplementation 'org.mockito:mockito-android:2.17.0'
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
     androidTestImplementation 'com.nhaarman:mockito-kotlin:1.5.0'
 }
 
