tests: updating android tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
         testInstrumentationRunner "com.javimartd.theguardian.test.TestRunner"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     signingConfigs {
         pro {
             try {
