--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,13 +33,13 @@ jobs:
           cache: gradle
 
       - name: starts a debug build
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleDevDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.APP_NAME }}-debug-${{ env.RUN_NUMBER }}
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/dev/debug/app-dev-debug.apk
 
   unit-tests:
     runs-on: ubuntu-latest
@@ -76,10 +76,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check Lint
-        run: ./gradlew lintDebug
+        run: ./gradlew lintDevDebug
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
-          path: app/build/reports/lint-results-debug.html
+          path: app/build/reports/lint-results-devDebug.html
